kubernetes/monitoring/uptime-kuma/base/mariadb.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: uptime-kuma
  name: database
  labels:
    kalexlab.xyz/app: uptime-kuma
    kalexlab.xyz/component: database
spec:
  type: ClusterIP
  ports:
    - name: mariadb
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    kalexlab.xyz/app: uptime-kuma
    kalexlab.xyz/component: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: uptime-kuma
  name: database
  labels:
    kalexlab.xyz/app: uptime-kuma
    kalexlab.xyz/component: database
spec:
  replicas: 1
  serviceName: database
  selector:
    matchLabels:
      kalexlab.xyz/app: uptime-kuma
      kalexlab.xyz/component: database
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: uptime-kuma
        kalexlab.xyz/component: database
    spec:
      restartPolicy: Always
      containers:
        - name: database
          image: "docker.io/library/mariadb:10.6.20"
          imagePullPolicy: IfNotPresent

          ports:
            - name: mariadb
              containerPort: 3306
              protocol: TCP

          livenessProbe:
            exec:
              command:
                [
                  "sh",
                  "-c",
                  "mysqladmin ping -hlocalhost -u$MARIADB_USER -p$MARIADB_PASSWORD",
                ]
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                [
                  "sh",
                  "-c",
                  "mysqladmin ping -hlocalhost -u$MARIADB_USER -p$MARIADB_PASSWORD",
                ]
            periodSeconds: 10
            failureThreshold: 12

          resources:
            requests:
              memory: 40Mi
              cpu: 5m
            limits:
              memory: 200Mi
              cpu: 100m

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /run/mysqld
              name: run
            - mountPath: /var/lib/mysql
              name: uptime-kuma-db-pvc

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 1Gi

  volumeClaimTemplates:
    - metadata:
        name: uptime-kuma-db-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
