kubernetes/monitoring/uptime-kuma/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: uptime-kuma
  name: uptime-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`uptime.kalexlab.xyz`)
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: uptime-ingress-certificate-secret
